--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
  }
 
 
+
 @plugin "daisyui/theme" {
   name: "sunset";
   default: false;
@@ -13,7 +14,7 @@
   --color-base-200: oklch(20% 0.019 237.69);
   --color-base-300: oklch(18% 0.019 237.69);
   --color-base-content: oklch(77.383% 0.043 245.096);
-  --color-primary: oklch(74.703% 0.158 39.947);
+  --color-primary: oklch(0.6551 0.2304 29.71);
   --color-primary-content: oklch(14.94% 0.031 39.947);
   --color-secondary: oklch(72.537% 0.177 2.72);
   --color-secondary-content: oklch(14.507% 0.035 2.72);
@@ -29,9 +30,9 @@
   --color-warning-content: oklch(17.113% 0.016 74.427);
   --color-error: oklch(85.511% 0.078 16.886);
   --color-error-content: oklch(17.102% 0.015 16.886);
-  --radius-selector: 0.25rem;
-  --radius-field: 2rem;
-  --radius-box: 0.5rem;
+  --radius-selector: 1rem;
+  --radius-field: 0.5rem;
+  --radius-box: 1rem;
   --size-selector: 0.25rem;
   --size-field: 0.25rem;
   --border: 1px;
