--- a/src/app.css
+++ b/src/app.css
@@ -12,8 +12,7 @@ html.dark-mode .icon-container svg {
   opacity: 0.6;
 }
 
-html.component-icons-hidden .common-component-icons,
-body.component-icons-hidden .common-component-icons {
+html.component-icons-hidden .common-component-icons {
   display: none;
 }
 
@@ -21,8 +20,7 @@ body.component-icons-hidden .common-component-icons {
   background-color: rgba(255,255,255,0.8);
 }
 
-html.dark-mode .component-icon,
-body.dark-mode .component-icon {
+html.dark-mode .component-icon {
   background-color: rgba(0,0,0,0.5);
 }
 
